// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tag should render a tag 1`] = `
<span
  className="tag normal"
  onBlur={[Function]}
  onKeyUp={[Function]}
>
  <span>
    Normal
  </span>
</span>
`;

exports[`Tag should render an icon and a text 1`] = `
<span
  className="tag normal"
  onBlur={[Function]}
  onKeyUp={[Function]}
>
  <span
    className="icon"
  >
    <img
      alt="icon"
    />
  </span>
  <span>
    text
  </span>
</span>
`;

exports[`Tag should render as an anchor when provided an href 1`] = `
<a
  className="tag normal is-interactive"
  href="MockHref"
  onBlur={[Function]}
  onKeyUp={[Function]}
>
  <span>
    href
  </span>
</a>
`;
